--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>vuex-sell</title>
+    <script src="https://cdn.bootcss.com/jquery/3.1.0/jquery.js"></script>
   </head>
   <body>
     <div id="app"></div>
